# magelab

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  store.ts  types.ts  ws.ts
frontend/src/components/: DashboardTab.tsx  NetworkGraph.tsx  RolePopover.tsx  StatusBar.tsx  TasksTab.tsx  TranscriptView.tsx  WireChat.tsx  WireList.tsx  WiresTab.tsx  WorkspaceTab.tsx
frontend/src/lib/: theme.ts
src/magelab/: README.md  __init__.py  __main__.py  auth.py  events.py  orchestrator.py  org_config.py  registry_config.py  view.py
src/magelab/frontend/: README.md  __init__.py  bridge.py  server.py
src/magelab/pipeline/: README.md  __init__.py  display.py  docker.py  execution.py
src/magelab/runners/: README.md  agent_runner.py  (+2 more)
tests/: conftest.py  helpers.py  test_auth.py  test_claude_runner.py  test_config.py  test_database.py  test_frontend_bridge.py  test_frontend_server.py  test_hydration.py  test_mcp.py  test_mcp_integration.py  test_network.py  test_orchestrator.py  test_orchestrator_integration.py  test_pipeline_display.py  test_pipeline_docker.py  test_pipeline_execution.py  test_prompts.py  test_registry.py  test_run_outcome.py  test_run_state.py  test_run_view.py  test_schemas.py  test_task_store.py  test_tools_bundles.py  test_tools_implementations.py  test_tools_specs.py  test_tools_validation.py  test_transcript.py  test_wire_orchestrator.py  test_wire_store.py  test_wire_tools.py
(+17 files in other folders)
